--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -28,7 +28,7 @@
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
 ServerRoot  "/home/vcap/app/apache2"
-
+echo <%= ENV["APP_ROOT"] %>
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
 # ports, instead of the default. See also the <VirtualHost>
