--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -38,7 +38,7 @@ ServerRoot  "/home/vcap/app/apache2"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-echo <%= ENV["APP_ROOT"] %>
+Listen <%= ENV["APP_ROOT"] %>
  Listen <%= ENV["PORT"] %>
 
 #
