--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -27,8 +27,8 @@
 # at a local disk.  If you wish to share the same ServerRoot for multiple
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
-ServerRoot  "/home/vcap/app/apache2"
-
+#ServerRoot  "/home/vcap/app/apache2"
+ServerRoot  <%= ENV["APP_ROOT"] %>/apache2
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
 # ports, instead of the default. See also the <VirtualHost>
@@ -161,8 +161,9 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot  "/home/vcap/app/apache2/htdocs"
-
+#DocumentRoot  "/home/vcap/app/apache2/htdocs"
+#DocumentRoot  /home/vcap/app/apache2/htdocs
+ DocumentRoot <%= ENV["APP_ROOT"] %>/apache2/htdocs
 #
 # Each directory to which Apache has access can be configured with respect
 # to which services and features are allowed and/or disabled in that
