--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -38,7 +38,7 @@ ServerRoot  <%= ENV["APP_ROOT"] %>/apache2
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen <%= ENV["APP_ROOT"] %>
+ 
  Listen <%= ENV["PORT"] %>
 
 #
@@ -163,7 +163,7 @@ ServerAdmin you@example.com
 #
 #DocumentRoot  "/home/vcap/app/apache2/htdocs"
 #DocumentRoot  /home/vcap/app/apache2/htdocs
- DocumentRoot <%= ENV["APP_ROOT"] %>/apache2/htdocs
+DocumentRoot <%= ENV["APP_ROOT"] %>/apache2/htdocs
 #
 # Each directory to which Apache has access can be configured with respect
 # to which services and features are allowed and/or disabled in that
@@ -189,7 +189,9 @@ ServerAdmin you@example.com
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/home/vcap/app/apache2/htdocs">
+
+#<Directory "/home/vcap/app/apache2/htdocs">
+<Directory "<%= ENV["APP_ROOT"] %>/apache2/htdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -309,7 +311,9 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    ScriptAlias /cgi-bin/ "/home/vcap/app/apache2/cgi-bin/"
+    #ScriptAlias /cgi-bin/ "/home/vcap/app/apache2/cgi-bin/"
+    ScriptAlias /cgi-bin/ "<%= ENV["APP_ROOT"] %>/apache2/cgi-bin/"
+    
 
 </IfModule>
 
@@ -325,7 +329,9 @@ LogLevel warn
 # "<%= ENV["APP_ROOT"] %>/apache2/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-<Directory "/home/vcap/app/apache2/cgi-bin">
+#<Directory "/home/vcap/app/apache2/cgi-bin">
+<Directory "<%= ENV["APP_ROOT"] %>/apache2/cgi-bin">
+
     AllowOverride None
     Options None
     Order allow,deny
