--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -28,7 +28,7 @@
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
 #ServerRoot  "/home/vcap/app/apache2"
-ServerRoot  <%= ENV["APP_ROOT"] %>/apache2
+ServerRoot  "<%= ENV["APP_ROOT"] %>/apache2"
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
 # ports, instead of the default. See also the <VirtualHost>
@@ -163,7 +163,7 @@ ServerAdmin you@example.com
 #
 #DocumentRoot  "/home/vcap/app/apache2/htdocs"
 #DocumentRoot  /home/vcap/app/apache2/htdocs
-DocumentRoot <%= ENV["APP_ROOT"] %>/apache2/htdocs
+DocumentRoot "<%= ENV["APP_ROOT"] %>/apache2/htdocs"
 #
 # Each directory to which Apache has access can be configured with respect
 # to which services and features are allowed and/or disabled in that
